--- a/bulk-ingester/pom.xml
+++ b/bulk-ingester/pom.xml
@@ -27,6 +27,16 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-elasticsearch-database-connector</artifactId>
             <version>${alfresco-db-connector.version}</version>
