ACS-6389: [HxI PH] Listen to predictions from HxI

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -52,6 +52,13 @@
                                             <classifier>app</classifier>
                                             <outputDirectory>${project.basedir}/target/dependency</outputDirectory>
                                         </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.alfresco</groupId>
+                                            <artifactId>alfresco-hxinsight-connector-prediction-applier</artifactId>
+                                            <version>${project.version}</version>
+                                            <classifier>app</classifier>
+                                            <outputDirectory>${project.basedir}/target/dependency</outputDirectory>
+                                        </artifactItem>
                                     </artifactItems>
                                 </configuration>
                             </execution>
@@ -76,6 +83,13 @@
                                             <version>${project.version}</version>
                                             <classifier>app</classifier>
                                             <outputDirectory>${project.build.directory}/classes/docker/bulk-ingester</outputDirectory>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.alfresco</groupId>
+                                            <artifactId>alfresco-hxinsight-connector-prediction-applier</artifactId>
+                                            <version>${project.version}</version>
+                                            <classifier>app</classifier>
+                                            <outputDirectory>${project.build.directory}/classes/docker/prediction-applier</outputDirectory>
                                         </artifactItem>
                                     </artifactItems>
                                 </configuration>
@@ -169,6 +183,39 @@
                                         </resource>
                                         <resource>
                                             <directory>${project.parent.basedir}/bulk-ingester/target/generated-resources</directory>
+                                            <includes>
+                                                <include>licenses/*</include>
+                                            </includes>
+                                        </resource>
+                                        <resource>
+                                            <directory>${project.basedir}/src/main/resources</directory>
+                                            <includes>
+                                                <include>Dockerfile</include>
+                                            </includes>
+                                        </resource>
+                                        <resource>
+                                            <directory>${project.basedir}</directory>
+                                            <includes>
+                                                <include>README.md</include>
+                                            </includes>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>copy-resources-docker-prediction-applier</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/classes/docker/prediction-applier</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${project.parent.basedir}/prediction-applier/target/generated-sources/license</directory>
+                                        </resource>
+                                        <resource>
+                                            <directory>${project.parent.basedir}/prediction-applier/target/generated-resources</directory>
                                             <includes>
                                                 <include>licenses/*</include>
                                             </includes>
