ACS-6869: Adding node filtering by aspect in live ingester.

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -34,6 +34,10 @@ alfresco:
     shared-file-store:
       host: http://localhost
       port: 8099
+  filter:
+    aspect:
+      allow:
+      deny:
 hyland-experience:
   insight:
     base-url: http://localhost:8001
