--- a/live-ingester/src/integration-test/resources/application-test.yml
+++ b/live-ingester/src/integration-test/resources/application-test.yml
@@ -11,6 +11,10 @@ alfresco:
     shared-file-store:
       retry:
         initial-delay: 0
+  filter:
+    aspect:
+      allow:
+      deny:
 hyland-experience:
   authentication:
     retry:
