ACS-6389: [HxI PH] Listen to predictions from HxI - add new (JAMP) extension

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -59,6 +59,13 @@
                                             <classifier>app</classifier>
                                             <outputDirectory>${project.basedir}/target/dependency</outputDirectory>
                                         </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.alfresco</groupId>
+                                            <artifactId>prediction-applier-extension</artifactId>
+                                            <version>${project.version}</version>
+                                            <!--<classifier>ext</classifier>-->
+                                            <outputDirectory>${project.basedir}/target/dependency</outputDirectory>
+                                        </artifactItem>
                                     </artifactItems>
                                 </configuration>
                             </execution>
@@ -90,6 +97,13 @@
                                             <version>${project.version}</version>
                                             <classifier>app</classifier>
                                             <outputDirectory>${project.build.directory}/classes/docker/prediction-applier</outputDirectory>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.alfresco</groupId>
+                                            <artifactId>prediction-applier-extension</artifactId>
+                                            <version>${project.version}</version>
+                                            <!--<classifier>ext</classifier>-->
+                                            <outputDirectory>${project.build.directory}/classes/docker/prediction-applier-extension</outputDirectory>
                                         </artifactItem>
                                     </artifactItems>
                                 </configuration>
@@ -137,7 +151,7 @@
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>copy-resources-docker-live-indexing</id>
+                                <id>copy-resources-docker-live-ingester</id>
                                 <phase>process-resources</phase>
                                 <goals>
                                     <goal>copy-resources</goal>
@@ -170,7 +184,7 @@
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>copy-resources-docker-bulk-indexing</id>
+                                <id>copy-resources-docker-bulk-ingester</id>
                                 <phase>process-resources</phase>
                                 <goals>
                                     <goal>copy-resources</goal>
@@ -225,6 +239,40 @@
                                             <includes>
                                                 <include>Dockerfile</include>
                                             </includes>
+                                        </resource>
+                                        <resource>
+                                            <directory>${project.basedir}</directory>
+                                            <includes>
+                                                <include>README.md</include>
+                                            </includes>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>copy-resources-docker-prediction-applier-extension</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/classes/docker/prediction-applier-extension</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${project.parent.basedir}/prediction-applier-extension/target/generated-sources/license</directory>
+                                        </resource>
+                                        <resource>
+                                            <directory>${project.parent.basedir}/prediction-applier-extension/target/generated-resources</directory>
+                                            <includes>
+                                                <include>licenses/*</include>
+                                            </includes>
+                                        </resource>
+                                        <resource>
+                                            <directory>${project.basedir}/src/main/resources/docker/prediction-applier-extension</directory>
+                                            <!--<filtering>true</filtering>-->
+                                            <!--<includes>
+                                                <include>Dockerfile</include>
+                                            </includes>-->
                                         </resource>
                                         <resource>
                                             <directory>${project.basedir}</directory>
