ACS-6871: Adding Node Type filtering for Repo Events.

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -38,6 +38,9 @@ alfresco:
     aspect:
       allow:
       deny:
+    type:
+      allow:
+      deny:
 hyland-experience:
   insight:
     base-url: http://localhost:8001
