--- a/distribution/src/main/resources/docker/prediction-applier-extension/Dockerfile
+++ b/distribution/src/main/resources/docker/prediction-applier-extension/Dockerfile
@@ -1,7 +1,7 @@
-FROM @docker.acs.image@:@alfresco.platform.version@
+FROM @dist.alfresco.docker.image@:@dist.alfresco.version@
 
 ARG TOMCAT_DIR=/usr/local/tomcat
-ARG USERNAME=@alfresco.platform.docker.user@
+ARG USERNAME=@dist.alfresco.docker.user@
 
 USER root
 
@@ -12,10 +12,6 @@ COPY Dockerfile *.jar $TOMCAT_DIR/webapps/alfresco/WEB-INF/lib/
 COPY Dockerfile *.amp $TOMCAT_DIR/amps/
 RUN java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install \
               $TOMCAT_DIR/amps $TOMCAT_DIR/webapps/alfresco -directory -nobackup -force
-
-#COPY alfresco-global.properties $TOMCAT_DIR/shared/classes/alfresco-global.properties
-#COPY dev-log4j.properties $TOMCAT_DIR/shared/classes/alfresco/extension
-#COPY disable-webscript-caching-context.xml $TOMCAT_DIR/shared/classes/alfresco/extension
 
 # Copy Dockerfile to avoid an error if no license file exists
 COPY Dockerfile licenses/*.* $TOMCAT_DIR/webapps/alfresco/WEB-INF/classes/alfresco/extension/license/
