--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
         <skipUnitTests>${skipTests}</skipUnitTests>
         <skipIntegrationTests>${skipTests}</skipIntegrationTests>
 
+        <alfresco.platform.version>23.1.0</alfresco.platform.version>
+        <alfresco.sdk.version>4.7.0</alfresco.sdk.version>
         <acs-event-model.version>0.0.27</acs-event-model.version>
         <spring-boot.version>3.2.3</spring-boot.version>
         <spring-camel.version>4.4.0</spring-camel.version>
@@ -76,9 +78,11 @@
         <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
         <spotless-plugin.version>2.43.0</spotless-plugin.version>
 
-        <!-- Used by the generated .env file for docker-compose. -->
-        <dist.alfresco.version>23.1.1</dist.alfresco.version>
-        <dist.share.version>23.1.1</dist.share.version>
+        <!-- Used by the generated .env file and Dockerfile for docker-compose -->
+        <dist.alfresco.docker.user>alfresco</dist.alfresco.docker.user>
+        <dist.alfresco.docker.image>quay.io/alfresco/alfresco-content-repository</dist.alfresco.docker.image>
+        <dist.alfresco.version>${alfresco.platform.version}</dist.alfresco.version>
+        <dist.share.version>${alfresco.platform.version}</dist.share.version>
         <dist.postgres.version>14.4</dist.postgres.version>
         <dist.transform.router.version>4.0.1</dist.transform.router.version>
         <dist.transform.core.aio.version>5.0.1</dist.transform.core.aio.version>
@@ -92,19 +96,6 @@
         <dist.search.enterprise.version>4.0.0.1</dist.search.enterprise.version>
         <dist.localstack.version>3.0.2</dist.localstack.version>
         <dist.wiremock.version>${wiremock.version}</dist.wiremock.version>
-
-        <alfresco.groupId>org.alfresco</alfresco.groupId>
-        <alfresco.bomDependencyArtifactId>acs-community-packaging</alfresco.bomDependencyArtifactId>
-        <!--<alfresco.platform.version>23.1.0</alfresco.platform.version>-->
-        <alfresco.platform.version>7.1.0</alfresco.platform.version>
-        <alfresco.platform.docker.user>alfresco</alfresco.platform.docker.user>
-        <alfresco.share.version>23.1.0</alfresco.share.version>
-        <alfresco.share.docker.version>23.1.0</alfresco.share.docker.version>
-
-        <!-- Docker images -->
-        <!--<docker.acs.image>alfresco/alfresco-content-repository-community</docker.acs.image>-->
-        <docker.acs.image>quay.io/alfresco/alfresco-content-repository</docker.acs.image>
-        <docker.share.image>alfresco/alfresco-share</docker.share.image>
     </properties>
 
     <repositories>
