NO_TICKET: Adding spotless license header config (against diff to master only)

--- a/pom.xml
+++ b/pom.xml
@@ -349,6 +349,11 @@
                             <includes>
                                 <include>src/*/java/**/*.java</include>
                             </includes>
+                            <ratchetFrom>origin/master</ratchetFrom> <!-- this means that the whole spottless check/apply will run only against differences to origin/master branch-->
+                            <licenseHeader>
+                                <file>license-header</file>
+                                <delimiter>package</delimiter>  <!-- content until first occurrence of the delimiter regex will be interpreted as header section -->
+                            </licenseHeader>
                             <eclipse>
                                 <file>alfresco-formatter.xml</file>
                             </eclipse>
