Try running pre-commit against modified files only.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
+      - id: changed-files
+        uses: tj-actions/changed-files@7fc073d92265804a8d4e4982b637dee053daf6c5 # v42.0.7
+      - name: Store changed files in env
+        run: echo "GITHUB_MODIFIED_FILES=${{ steps.changed-files.outputs.all_changed_files }}" >> $GITHUB_ENV
       - uses: Alfresco/alfresco-build-tools/.github/actions/pre-commit@v1.35.2
 
   veracode:
