--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,18 +15,12 @@ repos:
       - id: check-xml
   - repo: local
     hooks:
-      - id: spotless-check-and-format
-        name: spotless check and format
-        entry: ./scripts/hooks/spotless-check-and-format.sh
+      - id: check-format-and-headers
+        name: Check format and headers and fix if necessary
+        entry: ./scripts/hooks/check-format-and-headers.sh
         language: script
         files: ".*.java"
         pass_filenames: false
-      - id: license-header-check-and-update
-        name: License header check and update
-        entry: ./scripts/hooks/license-check-and-update.sh
-        language: script
-        exclude: ""
-        always_run: true
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
