ACS-6952 Automatically update modified license headers using maven plugin. (#208)
* Automatically update modified license headers using maven plugin.

* Test if pre-commit works as expected on GHA

* Try running pre-commit against modified files only.

* Checkout files to allow identifying the modified ones.

* Fix check for missing env var.

* Revert "Test if pre-commit works as expected on GHA"

This reverts commit 028da2b3a3669c0a8786d3f6a730db8423e8757b.

* Empty commit to fix build.

* ACS-6952 Merge formatting and license checks.

* ACS-6952 Test license check.

* Revert "ACS-6952 Test license check."

This reverts commit 4aa8a33802c8160f150ac9dc621bd5ceabfee60f.

* Empty commit to fix build.

---------

Co-authored-by: mpichura <maciej.pichura@hyland.com>

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.year>2023</project.year>
         <licenseName>community</licenseName>
+        <licenseUpdateHeaders>false</licenseUpdateHeaders>
         <skipTests>false</skipTests>
         <skipUnitTests>${skipTests}</skipUnitTests>
         <skipIntegrationTests>${skipTests}</skipIntegrationTests>
@@ -281,8 +282,9 @@
                         </execution>
                         <execution>
                             <id>check-licenses</id>
-                            <phase>compile</phase>
+                            <phase>validate</phase>
                             <goals>
+                                <goal>update-file-header</goal>
                                 <goal>check-file-header</goal>
                             </goals>
                             <configuration>
@@ -292,12 +294,12 @@
                                 <failOnNotUptodateHeader>true</failOnNotUptodateHeader>
                                 <licenseResolver>classpath://alfresco</licenseResolver>
                                 <licenseName>${licenseName}</licenseName>
+                                <canUpdateCopyright>${licenseUpdateHeaders}</canUpdateCopyright>
                                 <roots>
                                     <root>src</root>
                                 </roots>
                                 <includes>
                                     <include>**/*.java</include>
-                                    <include>**/*.jsp</include>
                                 </includes>
                             </configuration>
                         </execution>
