--- a/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/module.properties
+++ b/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/module.properties
@@ -13,13 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
-
-# SDK Sample module
-
-# ==== Beginning of Alfresco required/optional properties ====== #
-# NB: These properties are filtered at build time by Maven, single
-# sourcing from POM properties
+# Note. These properties are filtered at build time by Maven, single sourcing from POM properties
 module.id=${project.artifactId}
 #module.aliases=myModule-123, my-module
 module.title=${project.name}
@@ -28,21 +22,5 @@ module.version=${project.version}
 
 # The following optional properties can be used to prevent the module from being added
 # to inappropriate versions of the WAR file.
-# module.repo.version.min=2.0
-# module.repo.version.max=2.1
-
-# FIXME: This dependencies should come out of mvn dependencies on amp
-
-# The following describe dependencies on other modules
-# Depends on net.sf.myproject.module.SupportModuleA version ${version} or later
-# module.depends.net.sf.myproject.module.SupportModuleA=${version}-*
-# Depends on net.sf.myproject.module.SupportModuleA version ${version} to 2.0
-# module.depends.net.sf.myproject.module.SupportModuleB=${version}-2.0
-# Depends on net.sf.myproject.module.SupportModuleC - any version
-# module.depends.net.sf.myproject.module.SupportModuleB=*
-
-
-# ==== End of Alfresco required/optional properties ======= #
-
-
-# ==== Beginning of module required properties/optional ====== #
+module.repo.version.min=7.1
+#module.repo.version.max=7.1
