ACS-6952 Set inception year to 2023 for project.

--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,8 @@
                                 <licenseResolver>classpath://alfresco</licenseResolver>
                                 <licenseName>${licenseName}</licenseName>
                                 <canUpdateCopyright>${licenseUpdateHeaders}</canUpdateCopyright>
+                                <projectName>Alfresco HX Insight Connector</projectName>
+                                <inceptionYear>2023</inceptionYear>
                                 <roots>
                                     <root>src</root>
                                 </roots>
