--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -60,6 +60,10 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>acs-event-model</artifactId>
         </dependency>
