ACS-6389: add new common-test mvn module, refactor and clean-up code

--- a/bulk-ingester/pom.xml
+++ b/bulk-ingester/pom.xml
@@ -35,6 +35,10 @@
 
         <dependency>
             <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-hxinsight-connector-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
             <artifactId>alfresco-elasticsearch-database-connector</artifactId>
         </dependency>
         <dependency>
