--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,7 +10,7 @@
         <version>0.0.6-SNAPSHOT</version>
     </parent>
 
-    <name>Alfresco Connector for Hyland Experience Insight :: Common Test</name>
+    <name>Alfresco Connector for Hyland Experience Insight :: Common</name>
     <artifactId>alfresco-hxinsight-connector-common</artifactId>
     <packaging>jar</packaging>
 
