--- a/bulk-ingester/src/main/resources/application.yml
+++ b/bulk-ingester/src/main/resources/application.yml
@@ -4,7 +4,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/alfresco
     username: alfresco
     password: alfresco
-    hikari.maximumPoolSize: 20
+    hikari:
+      maximumPoolSize: 20
 
 alfresco:
   reindex:
