ACS-6389: add integration test verifying HxI model and aspect installation in Repo

--- a/common-test/src/main/resources/docker-tags.properties
+++ b/common-test/src/main/resources/docker-tags.properties
@@ -1,3 +1,4 @@
+repository.tag=@dist.alfresco.version@
 postgres.tag=@dist.postgres.version@
 activemq.tag=@dist.activemq.docker.tag@
 localstack.tag=@dist.localstack.version@
