--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -23,6 +23,14 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>localstack</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wiremock.integrations.testcontainers</groupId>
+            <artifactId>wiremock-testcontainers-module</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
