--- a/distribution/src/main/resources/docker/prediction-applier-extension/Dockerfile
+++ b/distribution/src/main/resources/docker/prediction-applier-extension/Dockerfile
@@ -8,12 +8,9 @@ USER root
 # Copy Dockerfile to avoid an error if no JARs exist
 COPY Dockerfile *.jar $TOMCAT_DIR/webapps/alfresco/WEB-INF/lib/
 
-# Copy Dockerfile to avoid an error if no AMPs exist
-COPY Dockerfile *.amp $TOMCAT_DIR/amps/
-RUN java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install \
-              $TOMCAT_DIR/amps $TOMCAT_DIR/webapps/alfresco -directory -nobackup -force
-
 # Copy Dockerfile to avoid an error if no license file exists
 COPY Dockerfile licenses/*.* $TOMCAT_DIR/webapps/alfresco/WEB-INF/classes/alfresco/extension/license/
+
+RUN chown -R -h $USERNAME $TOMCAT_DIR
 
 USER ${USERNAME}
