add and use transformer router, core aio and sfs testcontainers

--- a/common-test/src/main/resources/docker-tags.properties
+++ b/common-test/src/main/resources/docker-tags.properties
@@ -3,3 +3,6 @@ postgres.tag=@dist.postgres.version@
 activemq.tag=@dist.activemq.docker.tag@
 localstack.tag=@dist.localstack.version@
 wiremock.tag=@dist.wiremock.version@
+transform_router.tag=@dist.transform.router.version@
+transform_core_aio.tag=@dist.transform.core.aio.version@
+sfs.tag=@dist.transform.sfs.version@
