ACS-6874: Adding primary path/ancestor node filtering in live ingester.

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -41,6 +41,9 @@ alfresco:
     type:
       allow:
       deny:
+    path:
+      allow:
+      deny:
 hyland-experience:
   insight:
     base-url: http://localhost:8001
