--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
