--- a/common-test/src/main/resources/docker-tags.properties
+++ b/common-test/src/main/resources/docker-tags.properties
@@ -3,6 +3,7 @@ postgres.tag=@dist.postgres.version@
 activemq.tag=@dist.activemq.docker.tag@
 localstack.tag=@dist.localstack.version@
 wiremock.tag=@dist.wiremock.version@
-transform_router.tag=@dist.transform.router.version@
-transform_core_aio.tag=@dist.transform.core.aio.version@
+transform.router.tag=@dist.transform.router.version@
+transform.core.aio.tag=@dist.transform.core.aio.version@
 sfs.tag=@dist.transform.sfs.version@
+hxi.connector.tag=@version@
