--- a/e2e-test/pom.xml
+++ b/e2e-test/pom.xml
@@ -64,6 +64,14 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <excludes>
+                    <exclude>test-files/**</exclude>
+                </excludes>
+            </resource>
+        </resources>
     </build>
-
 </project>
