--- a/pom.xml
+++ b/pom.xml
@@ -445,6 +445,7 @@
                     <excludes>
                         <exclude>**/*IT.java</exclude>
                         <exclude>**/*IntegrationTest.java</exclude>
+                        <exclude>**/*ManualTest.java</exclude>
                     </excludes>
                     <skipTests>${skipUnitTests}</skipTests>
                 </configuration>
