ACS-7350: Failed to upload pdf rendition to presigned url - fix

--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -54,6 +54,10 @@
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-jackson-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-mail-starter</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
