ACS-6906: Add mime type configuration for pdf transforms.

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -34,6 +34,9 @@ alfresco:
     shared-file-store:
       host: http://localhost
       port: 8099
+    mime-type:
+      mapping:
+        '[*]': "application/pdf"
   filter:
     aspect:
       allow:
