ACS-7525: test with different repo versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,9 @@ jobs:
     if: >
       !contains(github.event.head_commit.message, '[skip tests]') &&
       !contains(github.event.head_commit.message, '[skip build]')
+    strategy:
+      matrix:
+        repositoryVersion: [ 23.1.0, 23.2.1 ]
     steps:
       - uses: actions/checkout@v3
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v1.35.2
@@ -88,8 +91,8 @@ jobs:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
-      - name: "Build application"
-        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install
+      - name: "Test application"
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean verify
 
 
   push_docker_images:
